delete product and category hanlder
