# docs/swagger.yaml
@@ -1,11 +1,4 @@
 definitions:
-  category.Request:
-    properties:
-      name:
-        type: string
-      parentID:
-        type: string
-    type: object
   city.Response:
     properties:
       country_id:
@@ -80,27 +73,6 @@ definitions:
       store_id:
         type: string
     type: object
-  product.Request:
-    properties:
-      barcode:
-        type: string
-      brand:
-        type: string
-      category_id:
-        type: string
-      country:
-        type: string
-      description:
-        type: string
-      id:
-        type: string
-      image_url:
-        type: string
-      measure:
-        type: string
-      name:
-        type: string
-    type: object
   response.Object:
     properties:
       data: {}
@@ -159,142 +131,6 @@ definitions:
 info:
   contact: {}
 paths:
-  /categories:
-    get:
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/response.Object'
-            type: array
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.Object'
-      summary: List of categories from the database
-      tags:
-      - categories
-    post:
-      consumes:
-      - application/json
-      parameters:
-      - description: body param
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/category.Request'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.Object'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.Object'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.Object'
-      summary: Add a new category to the database
-      tags:
-      - categories
-  /categories/{id}:
-    delete:
-      consumes:
-      - application/json
-      parameters:
-      - description: path param
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/response.Object'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.Object'
-      summary: Delete the category from the database
-      tags:
-      - categories
-    get:
-      consumes:
-      - application/json
-      parameters:
-      - description: path param
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.Object'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/response.Object'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.Object'
-      summary: Read the category from the database
-      tags:
-      - categories
-    put:
-      consumes:
-      - application/json
-      parameters:
-      - description: path param
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: body param
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/category.Request'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.Object'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/response.Object'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.Object'
-      summary: Update the category in the database
-      tags:
-      - categories
   /inventories:
     get:
       consumes:
@@ -431,142 +267,6 @@ paths:
       summary: Update the inventory in the database
       tags:
       - inventories
-  /products:
-    get:
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/response.Object'
-            type: array
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.Object'
-      summary: List of products from the database
-      tags:
-      - products
-    post:
-      consumes:
-      - application/json
-      parameters:
-      - description: body param
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/product.Request'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.Object'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.Object'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.Object'
-      summary: Add a new product to the database
-      tags:
-      - products
-  /products/{id}:
-    delete:
-      consumes:
-      - application/json
-      parameters:
-      - description: path param
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/response.Object'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.Object'
-      summary: Delete the product from the database
-      tags:
-      - products
-    get:
-      consumes:
-      - application/json
-      parameters:
-      - description: path param
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.Object'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/response.Object'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.Object'
-      summary: Read the product from the database
-      tags:
-      - products
-    put:
-      consumes:
-      - application/json
-      parameters:
-      - description: path param
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: body param
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/product.Request'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.Object'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/response.Object'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.Object'
-      summary: Update the product in the database
-      tags:
-      - products
   /stores:
     get:
       consumes:
